--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <head>
   <title>LairBnB</title>
- <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> -->
- <!--  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-<!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-slick/0.27.9/react-slick.js" integrity="sha512-RR4IYDHsWxodCJ5zEZUE7djWEjRLck4Eh0qiLDUpVLNTkjy+BgZD8Qj1xba9xcl5EwWiiPjMn6gw2cipSegB9Q==" crossorigin="anonymous"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/react-slick/0.27.9/react-slick.min.js" integrity="sha512-f29Oy55eQhayZbCrGhH8NUfVGsC/YyFFkrD0OsAZNZYMfyoIFYpyKPKDB1y2XF0XgC0sur00T2zKQw5AcKR+1A==" crossorigin="anonymous"></script> -->
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
@@ -65,6 +61,5 @@
   </div>
   <!-- <script src="http://localhost:3001/bundle.js"></script> -->
   <script src="http://localhost:3002/public/bundle.js"></script>
-  <!-- <script src="http://localhost:3003/public/bundle.js"></script>
-  <script src="http://localhost:9000/bundle.js"></script> -->
+  <!-- <script src="http://localhost:3003/public/bundle.js"></script>-->
 </body>
