--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
     <div id="location">
       <div id="locationSearch">
         <span>
-          <svg aria-hidden="true" role="presentation" focusable="false" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="display: inline; fill: none; stroke: #ff385d; stroke-width: 4; overflow: visible;">
+          <svg aria-hidden="true" role="presentation" focusable="false" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="display: inline; fill: none; height: 16px; width: 16px; stroke: #ff385d; stroke-width: 4; overflow: visible;">
             <g fill="none">
               <path d="m13 24c6.0751322 0 11-4.9248678 11-11 0-6.07513225-4.9248678-11-11-11-6.07513225 0-11 4.92486775-11 11 0 6.0751322 4.92486775 11 11 11zm8-3 9 9"></path>
             </g>
